src/objects/SomDig_RtbDataAggr__c.object
<CustomObject>
    <fields>
        <fullName>SomDig_AJ__c</fullName>
        <description>Aktuelles Jahr</description>
        <formula>VALUE(SomDig_Year__c) = YEAR(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aktuelles Jahr</inlineHelpText>
        <label>AJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Advertiser__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Advertiser</label>
        <referenceTo>ADvendio__RTBAccount__c</referenceTo>
        <relationshipLabel>RTB Daten (Demand Partner)</relationshipLabel>
        <relationshipName>SomDig_RtbDataAggrAdvertiser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_DemandPartner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Demand Partner</label>
        <referenceTo>ADvendio__RTBAccount__c</referenceTo>
        <relationshipLabel>RTB Daten (Advertiser)</relationshipLabel>
        <relationshipName>SomDig_RtbDataAggrDemandPartner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Month__c</fullName>
        <description>Monat der Umsatzdaten</description>
        <inlineHelpText>Monat der Umsatzdaten</inlineHelpText>
        <label>Monat</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_NeedsWtAgUp__c</fullName>
        <description>prüft ob die Accounts der Wt-Ag Beziehung identisch sind zu den Accounts der RTB/PA Accounts. Hilfsfeld für Yieldlab Aggregations-Mechanismus</description>
        <formula>IF ( SomDig_Advertiser__r.ADvendio__Account__c != SomDig_WtAg__r.SomDig_Werbetreibender__c,
&apos;Wt: &apos; &amp; SomDig_WtAg__r.SomDig_Werbetreibender__r.Name &amp; &apos; =&gt; &apos; &amp; SomDig_Advertiser__r.ADvendio__Account__r.Name,
&apos;&apos;
)
&amp;
IF (  SomDig_DemandPartner__r.ADvendio__Account__c  !=  SomDig_WtAg__r.SomDig_Agentur__c,
 BR() &amp; &apos;Ag: &apos; &amp; SomDig_WtAg__r.SomDig_Agentur__r.Name &amp; &apos; =&gt; &apos; &amp; SomDig_DemandPartner__r.ADvendio__Account__r.Name,
&apos;&apos;
)</formula>
        <inlineHelpText>prüft ob die Accounts der Wt-Ag Beziehung identisch sind zu den Accounts der RTB/PA Accounts</inlineHelpText>
        <label>Wt-Ag Update</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_NetRevenue__c</fullName>
        <label>Nettoumsatz</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_Stand__c</fullName>
        <description>letztes Änderungsdatum der Rohdaten &quot;RTB Data&quot; je Monat</description>
        <inlineHelpText>letztes Änderungsdatum der Rohdaten &quot;RTB Data&quot; je Monat</inlineHelpText>
        <label>Stand</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_UniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>eindeutiger Schlüssel aus Advertiser, Demand Partner, Jahr, Monat</description>
        <externalId>true</externalId>
        <inlineHelpText>eindeutiger Schlüssel aus Advertiser, Demand Partner, Jahr, Monat</inlineHelpText>
        <label>Unique Key</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_WtAg__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>zugeordnete WT-AG-Beziehung (optional)</description>
        <inlineHelpText>zugeordnete WT-AG-Beziehung (optional)</inlineHelpText>
        <label>WT AG Beziehung</label>
        <referenceTo>SomDig_WtAgBeziehung__c</referenceTo>
        <relationshipLabel>RTB Data Aggr</relationshipLabel>
        <relationshipName>RTB_Data_Aggr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Year__c</fullName>
        <description>Jahr des aggregierten Umsatzes</description>
        <inlineHelpText>Jahr des aggregierten Umsatzes</inlineHelpText>
        <label>Jahr</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>RTB Data Aggr</label>
    <listViews>
        <fullName>Wt_Ag_Update_notwendig</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Advertiser__c</columns>
        <columns>SomDig_DemandPartner__c</columns>
        <columns>SomDig_Year__c</columns>
        <columns>SomDig_Month__c</columns>
        <columns>SomDig_NetRevenue__c</columns>
        <columns>SomDig_WtAg__c</columns>
        <columns>SomDig_NeedsWtAgUp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_NeedsWtAgUp__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>SomDig_WtAg__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Wt Ag Update notwendig</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Wt_Ag_nicht_vorhanden</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Advertiser__c</columns>
        <columns>SomDig_DemandPartner__c</columns>
        <columns>SomDig_NeedsWtAgUp__c</columns>
        <columns>SomDig_Year__c</columns>
        <columns>SomDig_Month__c</columns>
        <columns>SomDig_NetRevenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_NeedsWtAgUp__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>SomDig_WtAg__c</field>
            <operation>equals</operation>
        </filters>
        <label>Wt Ag nicht vorhanden</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>RTBDA-{00000}</displayFormat>
        <label>RTB Data Aggr-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTB Data Aggr</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>